--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   node-app :
     container_name: secondcontainer
+    image: mohamedelshshtawy/firstapp
     ports:
       - "4000:4000"
   nginx:
